# worktree-manager

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.claude-plugin/: marketplace.json
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/wkm-cli/: Cargo.toml  build.rs
crates/wkm-cli/src/: backend.rs  main.rs  ui.rs
crates/wkm-cli/src/commands/: adopt.rs  alias.rs  cd.rs  checkout.rs  config.rs  drop_branch.rs  fetch.rs  graph.rs  init.rs  list.rs  merge.rs  mod.rs  repair.rs  set_parent.rs  shell_setup.rs  stash.rs  status.rs  sync.rs  workspace.rs  worktree.rs
crates/wkm-cli/tests/: alias.rs  workspace.rs  worktree_path.rs
crates/wkm-core/: Cargo.toml
crates/wkm-core/src/: encoding.rs  error.rs  graph.rs  lib.rs  repo.rs
crates/wkm-core/src/git/: cli.rs  jj_cli.rs  mod.rs  types.rs
crates/wkm-core/src/ops/: adopt.rs  alias.rs  checkout.rs  drop_branch.rs  fetch.rs  init.rs  list.rs  merge.rs  mod.rs  repair.rs  set_parent.rs  stash.rs  status.rs  sync.rs  visibility.rs  workspace.rs  worktree.rs
crates/wkm-core/src/ops/sync/: jj.rs  mod.rs
crates/wkm-core/src/state/: lock.rs  mod.rs  types.rs
crates/wkm-core/tests/: repair_fixture.rs
crates/wkm-core/tests/fixtures/: dangling_state_after_pr9.toml
crates/wkm-sandbox/: Cargo.toml
crates/wkm-sandbox/src/: lib.rs
docs/: JJ_INTEGRATION.md  SPEC.md  naming.md  requirements.md  tought.md
plugin/wkm/: settings.json
plugin/wkm/.claude-plugin/: plugin.json
plugin/wkm/hooks/: hooks.json
plugin/wkm/skills/adopt/: SKILL.md
plugin/wkm/skills/merge-up/: SKILL.md
plugin/wkm/skills/repair/: SKILL.md
plugin/wkm/skills/start/: SKILL.md
plugin/wkm/skills/status/: SKILL.md
plugin/wkm/skills/sync/: SKILL.md
