[package]
name = "wkm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wkm"
path = "src/main.rs"

[dependencies]
wkm-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }

[dev-dependencies]
wkm-sandbox = { workspace = true }
tempfile = { workspace = true }
