[package]
name = "wkm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for wkm — git worktree manager with cascade rebase"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wkm-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }

[dev-dependencies]
wkm-sandbox = { workspace = true }
tempfile = { workspace = true }
