[package]
name = "wkm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
wkm-sandbox = { workspace = true }
proptest = { workspace = true }
